--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body{
     background-color: white;
 }
+main{
+    width: 70%;
+    box-shadow: 0px 1px 1px 2px rgba(0,0,0,0.4);
+    border-radius: 25px;
+    margin-top: 2%;
+}
 .cabecera{
     font-size: 2rem;
     font-weight: bold;
