--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: white;
 }
-main{
+#main{
     width: 70%;
     box-shadow: 0px 1px 1px 2px rgba(0,0,0,0.4);
     border-radius: 25px;
