--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,20 @@ body{
 }
 main{
     display: flex;
-    flex-flow: column-reverse;
-}
-#main{
+    flex-flow: row;
     width: 70%;
     box-shadow: 0px 1px 1px 2px rgba(0,0,0,0.4);
+    background:rgba(184, 184, 184, 0.712);
     border-radius: 25px;
     margin-top: 2%;
+}
+#main{
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: wrap;
+    overflow-x: scroll;
+    width: 80%;
+    height: 500px;
     
 }
 .cabecera{
@@ -34,20 +41,20 @@ main{
     align-items: center;
     margin-left: 10px;
     height: 200px;
-    width: 75%;
+    
 }
 .panel{
     display: flex;
-    justify-content: flex-start space-around;
-    flex-flow: row wrap;
-    margin-right: 3%;
-    width: 250px;
+    justify-content: flex-start;
+    flex-flow: column wrap;
     right: 0;
     
 }
 .fijo{
-    position: fixed;
-    top: 30%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 40px;
+    margin-left: 40px;
 }
 div.panel > div.circulo{
     width: 50px; 
